--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -18,22 +18,25 @@ task:
   Sync_script:
       - mkdir -p ~/work
       - cd ~/work
-      - repo init --depth=1 --no-repo-verify -u https://github.com/LineageOS/android.git -b lineage-18.1 -g default,-mips,-darwin,-notdefault
+      - repo init --depth=1 --no-repo-verify -u https://github.com/Evolution-X/manifest -b tiramisu -g default,-mips,-darwin,-notdefault
       - repo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j8
-      - git clone https://github.com/samsung-m11q/android_kernel_samsung_m11q kernel/samsung/m11q
-      - git clone https://github.com/Atharv-Supremacy/android_vendor_samsung_m11q vendor/samsung/m11q
-      - git clone https://github.com/Atharv-Supremacy/android_device_samsung_m11q device/samsung/m11q
-      - git clone https://github.com/LineageOS/android_device_samsung_slsi_sepolicy -b lineage-18.1 device/samsung_slsi/sepolicy
-      - git clone https://github.com/LineageOS/android_hardware_samsung -b lineage-18.1 hardware/samsung
+      - git clone https://github.com/Evolution-X-Devices/device_xiaomi_lavender device/xiaomi/lavender
+      - git clone https://github.com/Evolution-X-Devices/kernel_xiaomi_lavender kernel/xiaomi/lavender
+      - git clone https://github.com/Evolution-X-Devices/vendor_xiaomi_lavender vendor/xiaomi/lavender
+#     - git clone https://github.com/samsung-m11q/android_kernel_samsung_m11q kernel/samsung/m11q
+#     - git clone https://github.com/Atharv-Supremacy/android_vendor_samsung_m11q vendor/samsung/m11q
+#     - git clone https://github.com/Atharv-Supremacy/android_device_samsung_m11q device/samsung/m11q
+#     - git clone https://github.com/LineageOS/android_device_samsung_slsi_sepolicy -b lineage-18.1 device/samsung_slsi/sepolicy
+#     - git clone https://github.com/LineageOS/android_hardware_samsung -b lineage-18.1 hardware/samsung
 
   Build_script:
       - cd ~/work
       - . build/envsetup.sh
-      - lunch lineage_m11q-userdebug
-      - mka bacon
+      - lunch evolution_lavender-userdebug
+      - mka evolution
      
   Upload_script:
       - cd ~/work
-      - cd out/target/product/m11q
+      - cd out/target/product/lavender
       - curl -sL https://git.io/file-transfer | sh
-      - ./transfer wet *.zip
+      - ./transfer gof *.zip
