--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -29,7 +29,7 @@ task:
       - mkdir ~/evo-x
       - cd ~/evo-x
       - repo init --depth=1 -u $MANIFEST -b $MANIFEST_BRANCH
-      - repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
+      - repo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j8
       - git clone $DT_LINK $DT_PATH -b $DT_BRANCH
 
   Build_script:
