--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -28,7 +28,7 @@ task:
   Sync_script:
       - mkdir ~/evo-x
       - cd ~/evo-x
-      - repo init --depth=1 -u $MANIFEST -b $MANIFEST_BRANCH
+      - repo init  --no-repo-verify --depth=1 -u $MANIFEST -b $MANIFEST_BRANCH  -g default,-mips,-darwin,-notdefault
       - repo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j8
       - git clone $DT_LINK $DT_PATH -b $DT_BRANCH
 
