--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -33,7 +33,7 @@ task:
       - git clone $DT_LINK $DT_PATH -b $DT_BRANCH
 
   Build_script:
-      - cd ~/twrp
+      - cd ~/evo-x
       - export ALLOW_MISSING_DEPENDENCIES=true
       - export FOX_USE_TWRP_RECOVERY_IMAGE_BUILDER=1
       - export LC_ALL="C"
