--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -21,7 +21,7 @@ task:
   name: "Building recovery"
   timeout_in: 240m  
   container:
-      image: marvelmathesh/docker:rom
+      image: phoenix1708/aosp
       cpu: 8
       memory: 32G
   
