--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -26,13 +26,12 @@ task:
       memory: 32G
   
   Sync_script:
-      - repo init  --no-repo-verify --depth=1 -u $MANIFEST -b $MANIFEST_BRANCH  -g default,-mips,-darwin,-notdefault
-      - repo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j8 --fail-fast
+      - repo init --no-repo-verify --depth=1 -u $MANIFEST -b $MANIFEST_BRANCH  -g default,-mips,-darwin,-notdefault
+      - repo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j8
       - git clone $DT_LINK $DT_PATH -b $DT_BRANCH
 
   Build_script:
       - export ALLOW_MISSING_DEPENDENCIES=true
-      - export FOX_USE_TWRP_RECOVERY_IMAGE_BUILDER=1
       - export LC_ALL="C"
       - export USE_CCACHE=1
       - export CCACHE_EXEC=/usr/bin/ccache
